test/Fail/Issue7989.err
Issue7989.agda:10.5-6: warning: -W[no]DivergentModalityInClause
Ignoring the modality . of the clause that diverges from the
declared modality of the function
when scope checking the declaration
  f I = Set
    where
      D : Set
      . D = I

Issue7989.agda:10.10-11: error: [VariableIsIrrelevant]
Variable I is declared irrelevant, so it cannot be used here
when checking that the expression I has type Set
